--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -5,7 +5,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "openapp", "project") }}
+{{ render_local_nav(current_user, "openapp") }}
      <div class="container-padded  remove-padding-bottom">
         <section class="white">
             <div class="container container-padded">
