--- a/templates/account/settings.html
+++ b/templates/account/settings.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ helper.render_local_nav(current_user, "settings", "admin") }} 
+    {{ helper.render_local_nav(current_user, "settings") }} 
     <div class="container-main">
 <div class="row">
     <div class="col-md-9 col-sm-offset-3">
