--- a/templates/admin/applications.html
+++ b/templates/admin/applications.html
@@ -4,7 +4,7 @@
 {% from "applications/_helpers.html" import render_app_admin_featured, broken_image %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "featured", "admin") }}
+    {{ render_local_nav(current_user, "featured") }}
     <div class="container-padded">
         <div class="container container-padded">
             <div class="row">
