--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -3,17 +3,62 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "catalogue", "admin") }}
+{{ render_local_nav(current_user, "catalogue") }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
+            <div class="col-sm-9 col-sm-offset-3 text-center-xs">
                 <div class="row vcenter-sm">
                     <div class="col-sm-10 col-xs-12 vcenter-sm">
-                        <h1 class="">Search the OCLC database</h1>
+                        <h1 class="">Search the British Library database</h1>
                     </div>
                     <div class="col-sm-2 col-xs-12">
-                            <a href="#" class="btn btn-inverse pull-right-sm" id="catalogue-help"><i class="fa fa-book"></i> Help</a>
+                            <a href="#" class="btn btn-inverse pull-right-sm" data-toggle="modal" data-target="#helpmodal"><i class="fa fa-book"></i> Help</a>
+                    </div>
+                </div>
+                <div id="helpmodal" role="dialog" class="modal fade">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h3 class="text-center">Catalogue Seach Help</h3>
+                            </div>
+                            <div class="modal-body">
+                                <h4>Queries should be formed according to a variation of the CCL protocol, for example:</h4>
+
+                                    <p><strong>Title:</strong>
+                                    (1,4)=”Hard Times”</p> 
+                                    
+                                    <p><strong>Year of Publication:</strong>
+                                    (1,31)=”1984”</p><br>
+                                    
+                                    
+                                    <h4>Boolean operators can also be used, such as:</h4>
+                                    
+                                    <p><strong>Author and ISBN:</strong>
+                                     (1,1018)=“Pan Books”and(1,7)=” 9780671746063”</p><br>
+                                    
+                                    
+                                    <p>This syntax has to be exact, with any errors producing appropriate error messages, or possibly just a
+                                    lack of results. You can use this page to test your queries before including them in any projects.</p>
+                                    
+                                    <p>Searches can also be made directly via the API. You will be provided with an API string once you make
+                                    a successful search via this page. Results can be returned in XML, JSON and HTML format, with the latter
+                                    being intended primarily for uses within projects on the LibCrowds platform.</p>
+                                    
+                                    <p>The <a href="https://www.oclc.org/support/services/z3950/documentation/searchtips.en.html">OCLC documentation</a>
+                                    contains more information and the codes for each field.</p>
+                                    
+                                    <p>Note that a result count can also be returned via:<br>
+                                    http://www.libcrowds.com/api/catalogue/oclc/count?query=&lt;query&gt;</p>
+                            </div>
+                            
+                            <div class="modal-footer">
+                                <div class="pull-right">
+                                    <button type="submit" name='btn' value="Upload" data-dismiss="modal" class="btn btn-success btn-lg" />Ok</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <h4>This page can be used to test requests to and responses received from the British Library database</h4>
@@ -23,8 +68,8 @@
                     {{form.hidden_tag()}}
                     <fieldset>
                         {{ render_field(form.query, placeholder= _('Query'), class="form-control", required="true") }}
-                        {{ render_field(form.startPos, placeholder= _('Starting position'), class="form-control", type="number", min="0") }}
-                        {{ render_field(form.maxRecords, placeholder= _('Maximum records'), class="form-control", type="number", min="0") }}
+                        {{ render_field(form.startPos, placeholder= _('Starting position'), class="form-control", type="number") }}
+                        {{ render_field(form.maxRecords, placeholder= _('Maximum records'), class="form-control", type="number") }}
                         {{ render_field(form.format, class="form-control inline-radio") }}
                         <div class="pull-right" role="group">
                             <button type="submit" class="btn btn-danger">{{_('Search')}}</button>
@@ -37,10 +82,10 @@
                             <h4>{{count}} results returned</h4>
                         </div>
                         <div class="col-sm-2 col-xs-12">
+                                <a href="#" id="search-catalogue-again" class="btn btn-danger pull-right-sm">Search Again</a>
                         </div>
                     </div>
-                    <div id="catalogue-results">
-                        <a href="#" id="search-catalogue-again" class="btn btn-danger pull-right">Search Again</a>
+                    <div id="catalogue-results" class="padding-top-xs">
                         <h3>API query<strong></strong></h3>
                         <textarea rows="3" class="form-control readonly-select" onclick="this.focus();this.select()" readonly>{{apiString}}</textarea>
                         <h3 class="padding-top-sm">Example Result:</h3>
@@ -51,6 +96,7 @@
         </div>
     </div>
 </div>
+
 <script type="text/xml" id="xml2">{{record}}</script>
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 {% endblock %}
