--- a/templates/applications/new_blogpost.html
+++ b/templates/applications/new_blogpost.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_local_nav(current_user, 'blog', active_menu, app.short_name) }}
+{{ helper.render_local_nav(current_user, 'blog', app.short_name) }}
     <div class="container-padded">
         <div class="container container-padded">
         <div id="app-form" class="row"> 
