--- a/templates/applications/tutorial.html
+++ b/templates/applications/tutorial.html
@@ -11,7 +11,7 @@
         <a id="start" href={{url_for('app.presenter', short_name = app.short_name)}}
            class="btn btn-danger btn-lg"> 
            <i class="glyphicon glyphicon-thumbs-up"></i> 
-           {{_('Start contributing')}}!</a>
+           {{_('Contribute')}}</a>
     </div>
 </div>
 <div id='PYBOSSA_USER_LOCALE' hidden>
