--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -15,8 +15,8 @@
     
     <section  class="white pattern-white-wall inset-shadow-top">
         <div class="container container-padded">
-            <div class="padding-top-sm">
-                <h2 class="text-center">{{ _('Your Contributions') }}</h2>
+            <div class="padding-top-sm text-center">
+                <h2>{{ _('Your Contributions') }}</h2>
             {% if apps_contrib %}
                 <ul class="polaroids">
                     {% for app in apps_contrib %}
