--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "applications", "project" }}
+    {{ render_local_nav(current_user, "projects") }}
     <div class="container-padded">
         <div class="container container-padded">
             <div class="row">
