--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -2,12 +2,9 @@
 {% set active_page = "profile" %}
 {% set active_link = "settings" %}
 {% import "account/_helpers.html" as helper %}
-{% from "applications/_helpers.html" import broken_image %}
-
+{% import "applications/_helpers.html" as app_helper %}
+{% import "_formhelpers.html" as form_helper %}
 {% block content %}
-{% from "_formhelpers.html" import render_field %}
-{% from "_formhelpers.html" import render_field_horizontal %}
-{% from "_formhelpers.html" import render_field_horizontal_checkbox %}
 
 <script src="{{url_for('static', filename='js/vendor/jquery.Jcrop.min.js')}}"></script>
 <link rel="stylesheet" href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" type="text/css" />
@@ -31,7 +28,8 @@
                                 </div>
                             </div>
                             <br>
-                            {%if not user.info.avatar%}
+                            {{ app_helper.render_loading("Loading, please wait...") }}
+                            {%if not current_user.info.avatar%}
                                 <div class="row">
                                     <div class="col-xs-6 col-xs-offset-3 alert alert-info">
                                         <a href="#" class="close" data-dismiss="alert">&times;</a>
@@ -40,7 +38,7 @@
                                 </div>
                             {% endif %}
                             <h1 class="inset-text-grey">{{current_user.fullname}}</h1>
-                            {{ render_field(upload_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
+                            {{ form_helper.render_field(upload_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
                             {{ upload_form.x1 }}
                             {{ upload_form.y1 }}
                             {{ upload_form.x2 }}
@@ -71,10 +69,10 @@
                             <h2 {% if form.errors %}name="profile"{%endif%}>Update your profile</h2>
                             {{ form.id }}
                             {{ form.hidden_tag() }}
-                            {{ render_field_horizontal(form.fullname, placeholder= _('Full name'), class="form-control" ) }}
-                            {{ render_field_horizontal(form.name, placeholder= _('Username'), class="form-control" ) }}
-                            {{ render_field_horizontal(form.email_addr, placeholder= _('Email'), class="form-control" ) }}
-                            {{ render_field_horizontal_checkbox(form.privacy_mode, class="form-control") }}
+                            {{ form_helper.render_field_horizontal(form.fullname, placeholder= _('Full name'), class="form-control" ) }}
+                            {{ form_helper.render_field_horizontal(form.name, placeholder= _('Username'), class="form-control" ) }}
+                            {{ form_helper.render_field_horizontal(form.email_addr, placeholder= _('Email'), class="form-control" ) }}
+                            {{ form_helper.render_field_horizontal_checkbox(form.privacy_mode, class="form-control") }}
                             <div class="pull-right form-actions" role="group">
                                 <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
                                 <button type="submit" name="btn" value="Profile" class="btn btn-success" />{{ _('Save') }}</button>
@@ -89,9 +87,9 @@
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                             {{ password_form.id }}
                             {{ password_form.hidden_tag() }}
-                            {{ render_field(password_form.current_password, placeholder= _('Current password'), class="form-control") }}
-                            {{ render_field(password_form.new_password, placeholder= _('New password'), class="form-control") }}
-                            {{ render_field(password_form.confirm, placeholder= _('Confirm new password'), class="form-control") }}
+                            {{ form_helper.render_field(password_form.current_password, placeholder= _('Current password'), class="form-control") }}
+                            {{ form_helper.render_field(password_form.new_password, placeholder= _('New password'), class="form-control") }}
+                            {{ form_helper.render_field(password_form.confirm, placeholder= _('Confirm new password'), class="form-control") }}
                             <div class="pull-right form-actions" role="group">
                                 <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
                                 <button type="submit" name="btn" value="Password" class="btn btn-success" />{{ _('Save') }}</button>
@@ -105,5 +103,5 @@
     </section>
 </div>
 <script src="{{url_for('static', filename='js/image_crop.js')}}" type="text/javascript"></script>
-{{ broken_image() }}
+{{ app_helper.broken_image() }}
 {% endblock %}
