--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -17,7 +17,7 @@
 </tr>
 {% endmacro %}
 
-{% macro render_local_nav(current_user, active_link, active_menu, active_app) %}
+{% macro render_local_nav(current_user, active_link, active_app) %}
 {{app}}
 <ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
 {% if current_user.admin %}
@@ -33,25 +33,26 @@
     </ul>
 </li>
 {% endif %}
-{% if active_menu=="project" %}
     {% if current_user.admin %}
     <li class="nav-link">
         <a href="#" id="project-options">Project Options<i class="fa fa-angle-down pull-right"></i></a>
         <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
             <li class="nav-link"><a href="{{url_for('app.new')}}">New</a></li>
             <li class="nav-link"><a href="{{ url_for('account.applications', name=current_user.name) }}">Open</a></li>
-            {% if active_app != "none" and active_app != "" %}
+            {% if active_app %}
                 <li class="divider"></li>
-                <li class="nav-link"><a href="{{url_for('app.tasks', short_name=active_app)}}">{{_('Tasks')}}</a></li>
-                <li class="nav-link"><a href="{{url_for('app.settings', short_name=active_app)}}"> {{_('Settings')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('app.tasks', short_name=active_app)}}">{{_('Dashboard')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('app.task_presenter_editor', short_name=active_app)}}">{{_('Code Editor')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('app.settings', short_name=active_app)}}"> {{_('Project Details')}}</a></li>
                 <li class="nav-link"><a href="{{url_for('app.auditlog', short_name=active_app)}}">{{_('Audit Logs')}}</a></li>
             {% endif %}
         </ul>
     </li>
     {% endif %}
-    <li class="nav-link{% if active_link=="info"%} active{% endif %}"><a href="{{url_for('app.details', short_name=active_app)}}">{{_('Info')}}</a></li>
-    <li class="nav-link{% if active_link=="contribute"%} active{% endif %}"><a href="{{url_for('app.presenter', short_name=active_app)}}"> {{_('Contribute')}}</a></li>
-    <li class="nav-link{% if active_link=="statistics"%} active{% endif %}"><a href="{{url_for('app.show_stats', short_name=active_app)}}"> {{_('Statistics')}}</a></li>
-{% endif %}
+    {% if active_app %}
+        <li class="nav-link{% if active_link=="info"%} active{% endif %}"><a href="{{url_for('app.details', short_name=active_app)}}">{{_('Info')}}</a></li>
+        <li class="nav-link{% if active_link=="contribute"%} active{% endif %}"><a href="{{url_for('app.presenter', short_name=active_app)}}"> {{_('Contribute')}}</a></li>
+        <li class="nav-link{% if active_link=="statistics"%} active{% endif %}"><a href="{{url_for('app.show_stats', short_name=active_app)}}"> {{_('Statistics')}}</a></li>
+    {% endif %}
 </ul>
 {% endmacro %}
