--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "categories", "admin") }}
+{{ render_local_nav(current_user, "categories") }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
