--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -3,7 +3,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "admin", "admin") }}
+    {{ render_local_nav(current_user, "admin") }}
     <div class="container-padded">
         <div class="container container-padded">
             <div class="row">
