--- a/templates/applications/blog.html
+++ b/templates/applications/blog.html
@@ -1,12 +1,11 @@
 {% extends "/base.html" %}
-{% set active_menu = "project" %}
 {% set active_page = "applications" %}
 {% import "applications/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% if app %}
-        {{ render_local_nav(current_user, 'blogpost', active_menu, app.short_name) }}
+        {{ render_local_nav(current_user, 'blogpost', app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
