--- a/templates/applications/export.html
+++ b/templates/applications/export.html
@@ -5,12 +5,12 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ helper.render_loading(text=loading_text) }}
-        {{ render_local_nav(current_user, 'auditlog', active_menu, app.short_name) }}
+        {{ render_local_nav(current_user, 'export', app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                        {{ helper.render_loading("Exporting data, this may take a while, please wait...") }}
                         {{ helper.render_app_title(app, upload_method, subtitle=_('Export All Tasks and Task Runs'))}}
                         <p>{{ _('You can export and download') }} <strong>{{ _('all the available') }}</strong> {{ _('Tasks and Task Runs (the submitted answers by the users) in CSV or JSON formats.') }}</p>
                         <div class="row">
