--- a/templates/applications/importers/csv.html
+++ b/templates/applications/importers/csv.html
@@ -1,17 +1,16 @@
 {% extends "/base.html" %}
-{% set active_menu = "project" %}
 {% set active_page = "applications" %}
 {% import "applications/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_loading(loading_text) }}
-        {{ render_local_nav(current_user, 'auditlog', active_menu, app.short_name) }}
+        {{ render_local_nav(current_user, "tasks", app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                            {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
                             <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
                             {% if form %}
                             <h2>{{_('From a CSV file')}}</h2>
