--- a/templates/applications/importers/gdocs.html
+++ b/templates/applications/importers/gdocs.html
@@ -5,12 +5,12 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_loading(loading_text) }}
-        {{ render_local_nav(current_user, 'tasks', 'project', app.short_name) }}
+        {{ render_local_nav(current_user, "tasks", app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                            {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
                             <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
                             {% if form %}
                             <h2>{{_('From a Google Docs Spreadsheet')}}</h2>
