--- a/templates/applications/non_stats.html
+++ b/templates/applications/non_stats.html
@@ -1,11 +1,10 @@
 {% extends "/base.html" %}
-{% set active_menu = "projects" %}
 {% set active_page = "applications" %}
 {% import "applications/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, active_link, active_menu, app.short_name) }}
+    {{ render_local_nav(current_user, "statistics", app.short_name) }}
         <div class="container-padded">
             <div class="container container-padded">
                 <div class="row">
