--- a/templates/applications/task_autoimporter.html
+++ b/templates/applications/task_autoimporter.html
@@ -1,17 +1,16 @@
 {% extends "/base.html" %}
-{% set active_menu = "project" %}
 {% set active_page = "applications" %}
 {% import "applications/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_loading(loading_text) }}
-{{ render_local_nav(current_user, active_link, active_menu, app.short_name) }}
+{{ render_local_nav(current_user, "import", app.short_name) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {{ helper.render_loading(loading_text) }}
                 <h1><strong>{{app.name}}</strong>: {{_('Currently configured autoimport')}}</h1>
                 <h2>{{_('You currently have the following autoimporter configured')}}</h2>
                 {% if importer['type']=='epicollect' %}
