--- a/templates/applications/tasks/delete.html
+++ b/templates/applications/tasks/delete.html
@@ -5,7 +5,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-        {{ render_local_nav(current_user, 'info', "admin", app.short_name)}}
+        {{ render_local_nav(current_user, "tasks", app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
