--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -20,7 +20,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">x</span></button>
                                 <h3 class="text-center">Catalogue Seach Help</h3>
                             </div>
                             <div class="modal-body">
