--- a/templates/admin/oclc_search.html
+++ b/templates/admin/oclc_search.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% set active_page = "oclcsearch" %}
 {% from "admin/_helpers.html" import render_local_nav %}
-
 {% block content %}
 {{ render_local_nav(current_user, "catalogue") }}
 <div class="container-padded">
@@ -20,7 +19,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">x</span></button>
                                 <h3 class="text-center">Catalogue Seach Help</h3>
                             </div>
                             <div class="modal-body">
