--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1009,7 +1009,7 @@ ul.users li a {
     top: 70px;
     height: 100%;
     font-size: 14px;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .bs-docs-sidenav.affix-bottom {
