--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -59,7 +59,7 @@
                 {{ render_field_horizontal(form.allow_anonymous_contributors, class="form-control") }}
                 {{ render_field_horizontal(form.password, class="form-control") }}
                 {{ render_field_horizontal(form.webhook, class="form-control") }}
-                {{ render_field_horizontal(form.hidden, tooltip=_('Do you want to hide your project?'), class="form-control") }}
+                {{ render_field_horizontal(form.hidden, class="form-control") }}
                 <div class="form-actions">
                   <button type="submit" name='btn' value="Save the changes" class="btn btn-danger">{{_('Save the changes')}}</button>
                   <a href="{{url_for('app.settings', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
