--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -51,10 +51,11 @@
             <form class="form-horizontal" method="post" action="{{ url_for('app.update', short_name = app.short_name) }}">
               <fieldset>
                 {{ form.hidden_tag() }}
+                
                 {{ render_field_horizontal(form.name, class="form-control", placeholder=_('Name')) }}
                 {{ render_field_horizontal(form.short_name, class="form-control", placeholder=_('Short name or slug for the project'), label_text=_('Project slug:')) }}
                 {{ render_field_horizontal(form.description, class="form-control", placeholder=_('Short description')) }}
-                {{ render_field_horizontal(form.long_description, class="form-control", placeholder=_('Long description)) }}
+                {{ render_field_horizontal(form.long_description, class="form-control", placeholder=_('Long description')) }}
                 {{ render_field_horizontal(form.category_id, class="form-control") }}
                 {{ render_field_horizontal(form.allow_anonymous_contributors, class="form-control") }}
                 {{ render_field_horizontal(form.password, class="form-control") }}
